Skip to content

3.0 regression: Qt: vout does not resize

In Qt UI:

  • Start video playback.
  • Click the playlist button, the video should be minimized.
  • Click the playlist button again.

Expected result: video takes is expanded back to the whole video area.

Actual result: video moves to the main video area, but retains minimized size.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information