qt: Use native events to notify of a video widget resize

This method can't be used for Wayland as Qt won't invoke
QWidget::nativeEvent when Wayland is used.
Fix #18211